--- a/views/evil.ejs
+++ b/views/evil.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evil Here</title>
-    <script src="flagValidate.js">
-        function checkFlag() {
-            const flag = new URLSearchParams(window.location.search).get('flag');
-            if(!validation(flag)) {
+    <script src="tokenValidate.js">
+        function checkToken() {
+            const token = new URLSearchParams(window.location.search).get('token');
+            if(!validation(token[0])) {
                 document.getElementById('result').textContent = '403';
             }
         }
-        window.onload = checkFlag;
+        window.onload = checkToken;
     </script>
 </head>
 <body>
